ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  # ingressClassName: addon-http-application-routing
  rules:
  - host: portfolio.saqlain.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
  tls:
  - hosts:
    - portfolio.saqlain.tech
    secretName: letsencrypt-prod
